[package]
name = "purpur"
version = "0.1.0"
edition = "2021"
description = "A data loading and image augmentation library."
repository = "https://github.com/elftausend/purpur"
keywords = ["deep-learning", "data-augmentation", "csv", "image", "vec"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
image = { version="0.24", default-features = false, features=["jpeg", "png"]}
rand = "0.8.5"
csv = "1.1.6"